set player health to zero if ded, LMAO!

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -475,6 +475,7 @@
 
                 if(PlayerHealth <= 0)
                 {
+                    PlayerHealth = 0;
                     WinLoseMessage = "You ded son!";             
                 }
             }            
