--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -36,7 +36,7 @@
     }
     else
     {
-        <div class="game-info">@WinLoseMessage</div>
+        <div class="row justify-content-center game-info">@WinLoseMessage</div>
     }
 </div>
 
