--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -60,13 +60,18 @@ a, .btn-link {
 
 /* ------------------------------------------------------------------------ */
 
+.enemy-stats {
+    color: #f00;
+    font-weight: bold;
+}
+
 .game-field {
     outline: none;
     margin: 0 auto;
 }
 
 .game-info {
-    font-size: 32px !important;
+    font-size: 24px !important;
 }
 
 .wall {
