--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -43,7 +43,7 @@
     }
     else
     {
-        <div class="row justify-content-center game-info">@WinLoseMessage</div>
+        <div class="row justify-content-center ded-info">@WinLoseMessage</div>
     }
 </div>
 
@@ -421,18 +421,19 @@
         {
             InitiateAttackSequence(enemy.Location.X, enemy.Location.Y);
         }
-        
-        
-        if (EnemyStats != string.Empty)
+        else
         {
-            EnemyStats = string.Empty;
-        }
+            if (EnemyStats != string.Empty)
+            {
+                EnemyStats = string.Empty;
+            }
 
-        if(PlayerCombatInfo != string.Empty)
-        {
-            PlayerCombatInfo = string.Empty;
+            if(PlayerCombatInfo != string.Empty)
+            {
+                PlayerCombatInfo = string.Empty;
+            }
         }
-
+        
         return tileGameMapTraversable(x, y, 1 /* Wall */) &&            
                enemy.Walkable;
     }
