--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -10,6 +10,7 @@
 
 <div tabindex="0" class="container-fluid game-field" @onkeydown=KeyDown @ref="gameFieldDiv">
     <div class="row justify-content-center game-info">
+        <!--<div>X: @PlayerLocation.X | Y: @PlayerLocation.Y | W: @GoldenCandle.Location.X | @GoldenCandle.Location.Y | </div>-->
         <div>Health: @PlayerHealth</div>        
         <div>&nbsp;|&nbsp;Score: @PlayerScore</div>
         <div>&nbsp;|&nbsp;Enemies Killed: @PlayerEnemiesKilled</div>
@@ -142,7 +143,7 @@
 
         ViewPort = new Rectangle(viewPortX, viewPortY, viewPortWidth, viewPortHeight);
 
-        //lightMap = RB_FOV();
+        lightMap = RB_FOV();
     }
 
     protected override void OnInitialized()
@@ -394,7 +395,7 @@
 
         MoveEnemies();
         
-        //lightMap = RB_FOV();
+        lightMap = RB_FOV();
     }
 
     private bool IsTileWalkable(int x, int y, Movement? movementDirection, WhoAmI whoAmI)
@@ -590,8 +591,8 @@
         if (x >= WIDTH) x = WIDTH - 1;
         if (y >= HEIGHT) y = HEIGHT - 1;
 
-        //if (@lightMap[y, x] == 2)
-        //{
+        if (@lightMap[y, x] == 2)
+        {
             if (CoinLocations.Any(c => c.Location.X == x && c.Location.Y == y))
             {
                 return "coin";
@@ -628,7 +629,7 @@
             {
                 return "grass";
             }
-        //}
+        }
 
         return "hidden";
     }
